--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,9 @@
 
     <nav>
       <a href="/">Home</a>
+      <a href="/private/assistant-dashboard">Assistant Dashboard</a>
+      <a href="/private/teacher-dashboard">Teacher Dashboard</a>
+      <a href="/private/student-dashboard">Student Dashboard</a>
       {{#if user}}
         <!-- <a href="/">{{user.name}}'s Profile</a> -->
         <form action="/authentication/sign-out" method="POST">
